--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,41 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+  margin-top: 50px;
+}
+
+.card {
+  width: 300px;
+  height: 450px;
+  border-radius: 25px;
+  margin: auto;
+  background-color: white;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 111px;
+}
+
+.card-top {
+  font-size: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px;
+}
+
+.card-bot {
+  font-size: 100px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: rotate(180deg);
+  padding: 10px;
+}
+
+.button {
+  text-align: center;
+  margin-top: 50px;
+}
